# lxqt-panel

./: .gitignore  CMakeLists.txt  README.md  XdgDirs.cpp  XdgDirs.h  XdgIcon.cpp  XdgIcon.h  api-compliance-fix.patch
OneG4/: Application.cpp  Application.h  ConfigDialog.cpp  ConfigDialog.h  Globals.h  GridLayout.cpp  GridLayout.h  HtmlDelegate.cpp  HtmlDelegate.h  Notification.cpp  Notification.h  PluginInfo.cpp  PluginInfo.h  RotatedWidget.cpp  RotatedWidget.h  Settings.cpp  Settings.h
autostart/: 1g4-panel.desktop.in  CMakeLists.txt
cmake/: BuildPlugin.cmake
panel/: CMakeLists.txt  ilxqtpanel.h  ilxqtpanelplugin.h  ioneg4panel.h  ioneg4panelplugin.h  lxqtpanel.cpp  lxqtpanel.cpp.rej  lxqtpanel.h  lxqtpanel.h.rej  lxqtpanelapplication.cpp  lxqtpanelapplication.h  lxqtpanelapplication_p.h  lxqtpanelglobals.h  lxqtpanellayout.cpp  lxqtpanellayout.h  lxqtpanellimits.h  lxqtpanelpluginconfigdialog.cpp  lxqtpanelpluginconfigdialog.h  main.cpp  oneg4panel.cpp  oneg4panel.h  oneg4panelapplication.cpp  oneg4panelapplication.h  oneg4panelapplication_p.h  oneg4panelglobals.h  oneg4panellayout.cpp  oneg4panellayout.h  oneg4panellimits.h  oneg4panelpluginconfigdialog.cpp  oneg4panelpluginconfigdialog.h  panelpluginsmodel.cpp  panelpluginsmodel.h  plugin.cpp  plugin.h  pluginmoveprocessor.cpp  pluginmoveprocessor.h  pluginsettings.cpp  pluginsettings.h  pluginsettings_p.h  popupmenu.cpp  (+3 more)
panel/backends/: CMakeLists.txt  ilxqtabstractwmiface.cpp  ilxqtabstractwmiface.h  ioneg4abstractwmiface.cpp  ioneg4abstractwmiface.h  lxqtdummywmbackend.cpp  lxqtdummywmbackend.h  lxqttaskbartypes.h  oneg4dummywmbackend.cpp  oneg4dummywmbackend.h  oneg4taskbartypes.h
panel/backends/xcb/: CMakeLists.txt  lxqtwmbackend_x11.cpp  lxqtwmbackend_x11.h  oneg4wmbackend_x11.cpp  oneg4wmbackend_x11.h
panel/config/: addplugindialog.cpp  addplugindialog.h  configpaneldialog.cpp  configpaneldialog.h  configplacement.cpp  configplacement.h  configpluginswidget.cpp  configpluginswidget.h  configstyling.cpp  configstyling.h  configstyling.ui
panel/man/: 1g4-panel.1
panel/resources/: panel.conf
plugin-backlight/: backlight.cpp  backlight.h  sliderdialog.cpp  sliderdialog.h
plugin-colorpicker/: colorbutton.cpp  colorbutton.h  colorpicker.cpp  colorpicker.h
plugin-cpuload/: lxqtcpuload.cpp  lxqtcpuload.h  lxqtcpuloadconfiguration.cpp  lxqtcpuloadconfiguration.h  lxqtcpuloadplugin.cpp  lxqtcpuloadplugin.h
plugin-customcommand/: colorLabel.cpp  colorLabel.h  custombutton.cpp  custombutton.h  lxqtcustomcommand.cpp  lxqtcustomcommand.h  lxqtcustomcommandconfiguration.cpp  lxqtcustomcommandconfiguration.h
plugin-desktopswitch/: CMakeLists.txt  desktopswitch.cpp  desktopswitch.h  desktopswitchbutton.cpp  desktopswitchbutton.h  desktopswitchconfiguration.cpp  desktopswitchconfiguration.h
plugin-directorymenu/: directorymenu.cpp  directorymenu.h  directorymenuconfiguration.cpp  directorymenuconfiguration.h
plugin-dom/: domplugin.cpp  domplugin.h  domtreeitem.cpp  domtreeitem.h  treewindow.cpp  treewindow.h
plugin-fancymenu/: CMakeLists.txt  lxqtfancymenu.cpp  lxqtfancymenu.h  lxqtfancymenuappmap.cpp  lxqtfancymenuappmap.h  lxqtfancymenuappmodel.cpp  lxqtfancymenuappmodel.h  lxqtfancymenucategoriesmodel.cpp  lxqtfancymenucategoriesmodel.h  lxqtfancymenuconfiguration.cpp  lxqtfancymenuconfiguration.h  lxqtfancymenutypes.h  lxqtfancymenuwindow.cpp  lxqtfancymenuwindow.h
plugin-kbindicator/: kbindicator-plugin.cpp
plugin-mainmenu/: CMakeLists.txt  actionview.cpp  actionview.h  lxqtmainmenu.cpp  lxqtmainmenu.h  lxqtmainmenuconfiguration.cpp  lxqtmainmenuconfiguration.h  menustyle.cpp  menustyle.h
plugin-mount/: CMakeLists.txt  button.cpp  button.h  configuration.cpp  configuration.h  lxqtmountplugin.cpp  lxqtmountplugin.h  menudiskitem.cpp  menudiskitem.h  popup.cpp  popup.h
plugin-networkmonitor/: lxqtnetworkmonitor.cpp  lxqtnetworkmonitor.h  lxqtnetworkmonitorconfiguration.cpp  lxqtnetworkmonitorconfiguration.h  lxqtnetworkmonitorplugin.cpp  lxqtnetworkmonitorplugin.h
plugin-qeyes/: qeyes.cpp  qeyes.h  qeyesconfigdialog.cpp  qeyesconfigdialog.h  qeyesimagewidget.cpp  qeyesimagewidget.h  qeyesvectorwidget.cpp  qeyesvectorwidget.h  qeyeswidget.cpp  qeyeswidget.h
plugin-quicklaunch/: lxqtquicklaunch.cpp  lxqtquicklaunch.h  lxqtquicklaunchplugin.cpp  lxqtquicklaunchplugin.h  quicklaunchaction.h  (+3 more)
plugin-statusnotifier/: CMakeLists.txt  dbustypes.cpp  dbustypes.h  sniasync.cpp  sniasync.h  statusnotifier.cpp  statusnotifier.h  statusnotifierbutton.cpp  statusnotifierbutton.h  statusnotifierconfiguration.cpp  statusnotifierconfiguration.h  statusnotifieriteminterface.cpp  statusnotifieriteminterface.h  statusnotifierproxy.cpp  statusnotifierproxy.h  statusnotifierwatcher.cpp  statusnotifierwatcher.h  statusnotifierwidget.cpp  statusnotifierwidget.h
plugin-statusnotifier/resources/: statusnotifier.desktop
plugin-volume/: CMakeLists.txt  alsadevice.cpp  alsadevice.h  alsaengine.cpp  alsaengine.h  audiodevice.cpp  audiodevice.h  audioengine.cpp  audioengine.h  lxqtvolume.cpp  lxqtvolume.h  lxqtvolumeconfiguration.cpp  lxqtvolumeconfiguration.h  lxqtvolumeconfiguration.ui  oneg4volume.cpp  oneg4volume.h  oneg4volumeconfiguration.cpp  oneg4volumeconfiguration.h  oneg4volumeconfiguration.ui  ossengine.cpp  ossengine.h  pipewireengine.cpp  pipewireengine.h  pulseaudioengine.cpp  pulseaudioengine.h  volumebutton.cpp  volumebutton.h  volumepopup.cpp  volumepopup.h  wireplumberpolicy.cpp  wireplumberpolicy.h
plugin-volume/1g4-mixer/: CMakeLists.txt
plugin-volume/1g4-mixer/src/: 1g4-mixer.cc  1g4-mixer.h  CMakeLists.txt  cardwidget.cc  cardwidget.h  channel.cc  channel.h  devicewidget.cc  devicewidget.h  elidinglabel.cc  elidinglabel.h  mainwindow.cc  mainwindow.h  minimalstreamwidget.cc  minimalstreamwidget.h  rolewidget.cc  rolewidget.h  sinkinputwidget.cc  sinkinputwidget.h  sinkwidget.cc  sinkwidget.h  sourceoutputwidget.cc  sourceoutputwidget.h  sourcewidget.cc  sourcewidget.h  streamwidget.cc  streamwidget.h
plugin-volume/docs/: wireplumber-migration.md
plugin-volume/resources/: volume.desktop.in
(+123 files in other folders)
